# calendar_factory

./: .gitignore  README.md  calendar_generator.py  config.py  generate_calendar.py  main.py  pyproject.toml  requirements.txt
